--- a/titanic.html
+++ b/titanic.html
@@ -177,39 +177,39 @@ Le 25 mars, le capitaine Herbert Haddock est le premier à prendre le commandeme
     </div>
 <h2 class="section" id="chiffres">Les chiffres</h2>
   <p>
-   <table border="1">  
+   <table class="titanic-table">  
 <tr>
 		<td><strong> </strong></td>
-		<td>  1ère classe </td>
-		<td> 2ème classe </td>
-        <td> 3ème classe </td>
-	    <td> équipage </td>
-        <td> Total </td>
+		<td>1ère classe</td>
+		<td>2ème classe</td>
+        <td>3ème classe</td>
+	    <td>équipage</td>
+        <td>Total</td>
 </tr>
 	<tr>
-		<td> <strong>nombre de décès</strong> </td>
-		<td> 122</td>
-		<td> 167</td>
-		<td> 528</td>
-        <td> 673</td>
-        <td> 1490</td>   
+		<td><strong>nombre de décès</strong></td>
+		<td>122</td>
+		<td>167</td>
+        <td>528</td>
+        <td>673</td>
+        <td>1490</td>   
 </tr>
 	<tr>
-		<td><strong> nombre de surviants</strong> </td>
-		<td>  203  </td>
-		<td> 118  </td>
-        <td> 178</td>
-        <td> 212</td>
-        <td> 711</td>
+		<td><strong>nombre de surviants</strong></td>
+		<td>203</td>
+		<td>118</td>
+        <td>178</td>
+        <td>212</td>
+        <td>711</td>
 	
 </tr>
 	<tr>
-		<td> <strong>total</strong></td>
-		<td>325  </td>
-		<td> 285 </td>
-        <td> 706</td>
-        <td> 885</td>
-        <td> 2201</td>
+		<td><strong>total</strong></td>
+		<td>325</td>
+		<td>285</td>
+        <td>706</td>
+        <td>885</td>
+        <td>2201</td>
 	
       
       
@@ -225,13 +225,7 @@ Le 25 mars, le capitaine Herbert Haddock est le premier à prendre le commandeme
 </div>
 <h3 class="prop" style="margin-top: 50px;">Liste des personnalités décédées lors du naufrage</h3>
   <p>
-<table border="1">  
-  <thead>
-    <tr>
-      <th>Nom</th>
-      <th>Description</th>
-    </tr>
-  </thead>
+<table class="titanic-table">  
   <tbody>
     <!-- Section A -->
     <tr>
